Fix for banner on mobile.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:   http://medicine.wustl.edu
 Description: Base theme for School of Medicine sites
 Author:      Medical Public Affairs
 Author URI:  http://medicine.wustl.edu
-Version:	 2016.11.11.0
+Version:	 2016.12.01.0
 License:     GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -1848,6 +1848,10 @@ a#wusm-flickr:hover img {
 
 	#left-col {
 		display: none;
+	}
+
+	#featured-image-home {
+		z-index: -1;
 	}
 
 	#featured-image-home img {
